alignment fixes

--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,8 @@ header {
 #gameArea {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 #gameCon {
@@ -154,7 +156,7 @@ header {
 #enviroSoundsCon {
 	display: flex;
 	flex-direction: column;
-	margin-left: auto;
+	margin-left: 5%;
 }
 
 #enviroCon {
